# scraptain

./: Cargo.toml  README.md
src/: actions.rs  board.rs  client.rs  constants.rs  error.rs  lib.rs  mod.rs  models.rs  platform.rs  transforms.rs
src/scrapers/: indeed.rs  linkedin.rs  mod.rs
src/scrapers/hellowork/: constants.rs  hellowork.rs  mod.rs
src/scrapers/indeed/: constants.rs  indeed.rs  mod.rs
src/scrapers/linkedin/: constants.rs  linkedin.rs  mod.rs
tests/: hellowork_test.rs  tests.rs
