[package]
name = "scraptain"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust library for scraping job postings from various job boards"
license = "MIT"
repository = "https://github.com/yourusername/scraptain"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1.40", features = ["full"] }
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.5"
async-trait = "0.1"
governor = { version = "0.6", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
rate-limiting = ["governor"]
logging = ["tracing", "tracing-subscriber"]
