[package]
name = "scraptain"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust library for scraping job postings from various job boards"
license = "MIT"
repository = "https://github.com/yourusername/scraptain"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
url = "2.4"
chrono = "0.4"
rand = "0.8"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
