[package]
name = "scraptain"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust library for scraping job postings from various job boards"
license = "MIT"
repository = "https://github.com/yourusername/scraptain"

[dependencies]
headless_chrome = "1.0.9"
scraper = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.4"
chrono = "0.4"
once_cell = "1.19"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []
